# encom-os

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
iso/: packages.x86_64  pacman.conf  profiledef.sh
iso/airootfs/etc/: hostname  motd  os-release
shell/encom-firstboot/: Cargo.toml
shell/encom-firstboot/src/: main.rs
shell/encom-shell/: Cargo.toml
shell/encom-shell/src/: main.rs
