[workspace]
resolver = "2"
members = [
    "shell/encom-shell",
    "shell/encom-firstboot",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Asmit Dash <asmitdashin@gmail.com>"]
repository = "https://github.com/asmitdash/encom-os"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
