[package]
name = "encom-firstboot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "First-boot wizard: choose Portable vs Full install, configure model providers."

[[bin]]
name = "encom-firstboot"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
clap.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
